src/test/ui/nll/ty-outlives/projection-no-regions-fn.stderr
error[E0309]: the associated type `<T as Iterator>::Item` may not live long enough
  --> $DIR/projection-no-regions-fn.rs:13:5
   |
LL |     Box::new(x.next())
   |     ^^^^^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `<T as Iterator>::Item: 'a`...

error[E0309]: the associated type `<T as Iterator>::Item` may not live long enough
  --> $DIR/projection-no-regions-fn.rs:28:5
   |
LL |     Box::new(x.next())
   |     ^^^^^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `<T as Iterator>::Item: 'a`...

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0309`.
